Implemented sorted album tracks